# lambdahandler

./: .gitignore  LICENSE  README.TOOLKIT.md  README.md  dataviz_report.html  modelling.ipynb  pyproject.toml  requirements_data.txt  samconfig.toml  template.yaml
events/: event.json
hello_world/: Dockerfile  app.py  model.joblib  model.pkl  requirements.txt
