[tool.poetry]
name = "interview"
version = "0.1.0"
description = "Coding interview artifacts"
authors = ["Ievgenii Ts. <eugenelion@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
xgboost = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
